getOutputTimestamp() seems to use wrong time scale https://bugs.webkit.org/show_bug.cgi?id=264247 rdar://118323705

Reviewed by Eric Carlson.

The time returned by getOutputTimestamp() was incorrectly divided by the
sample rate. Fix this so the value returned is correct and matches Chrome
and Firefox.

* LayoutTests/webaudio/getOutputTimestamp-expected.txt: Added.
* LayoutTests/webaudio/getOutputTimestamp.html: Added.
* Source/WebCore/platform/audio/AudioDestinationResampler.cpp:
(WebCore::AudioDestinationResampler::render):

Canonical link: https://commits.webkit.org/275237@main